--- a/src/pages/Register.module.css
+++ b/src/pages/Register.module.css
@@ -48,3 +48,14 @@ form p {
   font-size: 12px;
   margin-top: 10px;
 }
+form label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #8da4f1;
+  font-size: 14px;
+  cursor: pointer;
+}
+form img {
+  width: 32px;
+}
