style message components

--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -1,3 +1,22 @@
 .chat {
   flex: 2;
 }
+
+.chatInfo {
+  height: 50px;
+  background-color: #5d6b8d;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  color: lightgray;
+}
+.chatIcons {
+  display: flex;
+  gap: 10px;
+}
+.chatInfo img {
+  background-color: transparent;
+  height: 24px;
+  cursor: pointer;
+}
