--- a/src/components/Message/Message.module.css
+++ b/src/components/Message/Message.module.css
@@ -18,8 +18,26 @@
 }
 
 .messageContent {
+  max-width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-end;
 }
-
+.messageContent p {
+  background-color: white;
+  padding: 10px 20px;
+  border-radius: 0px 10px 10px 10px;
+}
 .messageContent img {
   width: 50%;
+}
+.owner {
+  flex-direction: row-reverse;
+}
+.owner p {
+  background-color: #8da4f1;
+  color: white;
+  border-radius: 10px 0px 10px 10px;
+  max-width: max-content;
 }
