--- a/src/components/Chats/Chats.module.css
+++ b/src/components/Chats/Chats.module.css
@@ -5,6 +5,7 @@
   gap: 10px;
   color: white;
   cursor: pointer;
+  margin-bottom: 10px;
 }
 .userChat:hover {
   background-color: #2f2d52;
@@ -22,4 +23,5 @@
 .userChat p {
   font-style: 14px;
   color: lightgray;
+  margin: 0px;
 }
