--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -20,8 +20,8 @@
 }
 .user img {
   background-color: #ddddf7;
-  height: 24px;
-  width: 24px;
+  height: 30px;
+  width: 30px;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -32,12 +32,22 @@ button {
   border: none;
   color: #ddddf7;
 }
+.navbarDisplayName {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
 @media screen and (max-width: 900px) {
   .logo {
     display: none;
   }
   .user {
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: space-between;
+  }
+  .navbarDisplayName {
+    display: flex;
+    gap: 10px;
+    align-items: center;
   }
 }
