--- a/src/components/Message/Message.module.css
+++ b/src/components/Message/Message.module.css
@@ -1,6 +1,6 @@
 .message {
   display: flex;
-  gap: 20px;
+  gap: 10px;
 }
 
 .messageInfo {
@@ -9,6 +9,7 @@
   color: gray;
   font-weight: 300;
   margin-bottom: 20px;
+  align-items: center;
 }
 .messageInfo img {
   width: 40px;
@@ -28,6 +29,7 @@
   background-color: white;
   padding: 10px 20px;
   border-radius: 0px 10px 10px 10px;
+  margin: 5px 0px;
 }
 .messageContent img {
   width: 50%;
