--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -22,6 +22,15 @@
   height: 24px;
   cursor: pointer;
 }
+.wrapperChatLogo {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.wrapperChatLogo img {
+  border-radius: 50%;
+  object-fit: cover;
+}
 @media screen and (max-width: 800px) {
   .hideChatInfo {
     display: none;
