--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -37,6 +37,9 @@ button {
   gap: 10px;
   align-items: center;
 }
+.logoutIcon {
+  font-style: 12px;
+}
 @media screen and (max-width: 900px) {
   .logo {
     display: none;
