--- a/src/components/Message/Message.module.css
+++ b/src/components/Message/Message.module.css
@@ -25,6 +25,13 @@
   gap: 10px;
   align-items: flex-end;
 }
+.messageContentOwner {
+  max-width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-start;
+}
 .messageContent p {
   background-color: white;
   padding: 10px 20px;
